# mum_mum-idlis

./: .env  .gitignore  package-lock.json  pyproject.toml  start.py
app/: main.py
app/core/: config.py  constants.py  graphdb.py
app/models/: api.py
app/utilities/: bot_handler.py  payload_creator.py
front-end/: package-lock.json  package.json  start.sh
front-end/public/: index.html
front-end/src/: index.js  styles.css
frontend/: index.html  sample.html  script.js  styles.css
